 5-Apr-2020 V0.52 Suppress diagnostic logging in ReferenceSequenceCacheProvider()
 8-Apr-2020 V0.53 Adjust error handling in ReferenceSequenceCacheProvider()
 5-May-2020 V0.54 Add PubChem loader and workflow extensions
 9-May-2020 V0.55 Adjust cache management for PubChem refresh
 9-May-2020 V0.56 Log formatting adjustments
17-May-2020 V0.57 Revise the index for PubChem search
18-May-2020 V0.58 Cleanup some pipeline and logging issues.
23-May-2020 V0.59 Add PubChem tracking diagnostics
23-May-2020 V0.60 Adjust multiprocessing configuration
28-Jul-2020 V0.61 Added modules PubChemDataCacheProvider() PubChemIndexCacheProvider() PubChemEtlWrapper() and associated tests
28-Jul-2020 V0.62 Relax testing constraints for PubChem lookups and upversion
29-Jul-2020 V0.63 Add module PubChemEtlWorkflow() and associated tests
29-Jul-2020 V0.64 Add an automatic fallback support for stashed data sets.
29-Jul-2020 V0.65 Add stash() method to module PubChemEtlWorkflow()
30-Aug-2020 V0.66 Update dependencies
 8-Dec-2020 V0.67 Add PolymerEntityExtractor() and UniProtExtractor() from rcsb.utils.seqalign, cleanup tests and fixture issues
 9-Dec-2020 V0.68 Simplify API for PolymerEntityExtractor()
18-Jan-2021 V0.69 Update dependencies
25-Feb-2021 V0.70 Update with split out rcsb.utils.dictionary
18-Mar-2021 V0.71 Adjustments in initialization  UniProtExtractor()
13-May-2021 V0.72 Add minSeqLen argument to exportProteinEntityFasta()
24-May-2021 V0.73 Add BranchedEntityExtractor() and associated tests
26-May-2021 V0.74 Add modules GlycanProvider(), GlycanUtils() and associated tests
27-May-2021 V0.75 Implement GlyGen mapping in ReferenceSequenceAnnotationProvider and ReferenceSequenceAnnotationAdapter
28-May-2021 V0.76 Fix idempotent issue in ReferenceSequenceAnnotationAdapter()
30-May-2021 V0.77 Disable Pfam annotation from SIFTS
19-Jun-2021 V0.78 Add ChemRefMappingProvider(), modernize ChemRefExtractor(), and update __docformat__