@@ -68,3 +68,5 @@
 28-May-2021 V0.76 Fix idempotent issue in ReferenceSequenceAnnotationAdapter()
 30-May-2021 V0.77 Disable Pfam annotation from SIFTS
 19-Jun-2021 V0.78 Add ChemRefMappingProvider(), modernize ChemRefExtractor(), and update __docformat__
+28-Jun-2021 V0.79 Add LigandNeighborMappingProvider() LigandNeighborMappingExtractor() and associated tests
+
